updated content for tutoring

--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -113,7 +113,7 @@
     </div>
     <div class="dotted-line-33"></div>
   </div>
-  <div class="videos col-xl-12 margin-top-25">
+  <div class="videos col-xl-12 margin-top-25 mb-5">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/CZQeXJeEh5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
