--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="nav__image-home jumbotron">
   <div class="nav__header-blue-home">
-      <h1 class="header__text-h1">Welcome! Class is in session.</h1>
-      <p>Online lessons from a certified teacher specializing in Kindergarten through 5th Grade.</p>
+    <h1 class="header__text-h1">Welcome! Class is in session.</h1>
+    <p>Online lessons from a certified teacher specializing in Kindergarten through 5th Grade.</p>
   </div>
 </div>
-   <%= render 'shared/flashes' %>
+<%= render 'shared/flashes' %>
 <div class="container ">
   <section class="hero-section ">
     <div class="hero col-xl-12">
@@ -15,21 +15,23 @@
       </div>
     </div>
   </section>
-  <section >
+  <section>
     <h3 class="steps_container-h3 align-center margin-top-50">I provide two learning options to assist your child with their education:</h3>
     <div class="steps_container--grid margin-top-50 mx-auto col-xl-12">
-      <div class="paint-splash-img ">
-        <%= image_tag "paint-splash-2.svg", class:"image img-fluid" %>
-        <div class="learn_more-text col-xl-6">
-          <p class="">Private 30 minute tutoring&nbsp;sessions</p>
-          <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
+      <div class="row">
+        <div class="paint-splash-img col-xl-6">
+          <%= image_tag "paint-splash-2.svg", class:"image img-fluid" %>
+          <div class="learn_more-text col-xl-6">
+            <p class="">Private 30 minute tutoring&nbsp;sessions</p>
+            <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
+          </div>
         </div>
-      </div>
-      <div class="paint-splash-img ">
-        <%= image_tag "paint-splash-1.svg", class:"image img-fluid" %>
-        <div class="learn_more-text col-xl-6">
-          <p>Access to online learning&nbsp;resources</p>
-          <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
+        <div class="paint-splash-img col-xl-6">
+          <%= image_tag "paint-splash-1.svg", class:"image img-fluid" %>
+          <div class="learn_more-text col-xl-6">
+            <p>Access to online learning&nbsp;resources</p>
+            <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
+          </div>
         </div>
       </div>
     </div>
@@ -45,7 +47,6 @@
     <%= image_tag "paint-splash-lg.svg", class:"image img-fluid" %>
     <div class="quote__text">
       <p>"Today is a great day,<br> to learn something new."</p>
-
     </div>
   </div>
 </div>
