added text to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="hero col-xl-12">
       <%= image_tag "profile-img-sm.png", class:"profile-img " %>
       <div class="hero__content">
-        <h3 class="hero__content-h3">Meet Mrs. Abowd</h3>
+        <h3 class="hero__content-h3">Meet the teacher, Mrs. Abowd</h3>
         <p class="hero__content-p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. I've transitioned from helping students in the classroom, to helping students over the web.</p>
       </div>
     </div>
